changing to private to see if that changes the way that files are sent even though this repository is private

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webforce",
   "version": "1.0.0",
+  "private": true,
   "description": "Website to build on diferent aspects of web development stacks for further experience with tools that may be useful to know, use, and understand",
   "main": "run.js",
   "scripts": {
